<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.luohuasheng.bee</groupId>
    <artifactId>lhs-bee-jdbc-parent</artifactId>
    <version>1.1-SNAPSHOT</version>
    <modules>
        <module>lhs-bee-jdbc-dependencies</module>
        <module>lhs-bee-jdbc-core</module>
        <module>lhs-bee-jdbc-mongodb</module>
    </modules>
    <packaging>pom</packaging>

    <distributionManagement>
        <!--        <repository>-->
        <!--            <id>rdc-releases</id>-->
        <!--            <url>https://repo.rdc.aliyun.com/repository/102711-release-WcKLsR/</url>-->
        <!--        </repository>-->
        <!--        <snapshotRepository>-->
        <!--            <id>rdc-snapshots</id>-->
        <!--            <url>https://repo.rdc.aliyun.com/repository/102711-snapshot-2jpqBm/</url>-->
        <!--        </snapshotRepository>-->
        <snapshotRepository>
            <id>snapshots</id>
            <url>http://nexus.lianchuang.com:8081/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>releases</id>
            <url>http://nexus.lianchuang.com:8081/content/repositories/releases/</url>
        </repository>
    </distributionManagement>
    <build>
        <defaultGoal>compile</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <encoding>utf-8</encoding>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.4.0.905</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <timestamp>${maven.build.timestamp}</timestamp>
                            <version>${project.version}</version>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>${project.artifactId}</artifactId>
                            <buildOsName>${os.name} ${os.arch} ${os.version}</buildOsName>
                            <Os-Name>${os.name}</Os-Name>
                            <Os-Arch>${os.arch}</Os-Arch>
                            <Os-Version>${os.version}</Os-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>